--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "lab2",
+  "name": "home-decor",
   "version": "1.0.0",
-  "description": "my lab2",
+  "description": "home decor website",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "dev": "node ./index.js"
   },
   "author": "SurbhiSinghania",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "pug": "^3.0.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
   }
 }
